// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button.vue renders OXD button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--main" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD Glass button 1`] = `
<button type="button" class="oxd-button oxd-button--large oxd-button--glass" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Share Photos</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD button with custom color 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--main" style="background-color: palegreen;" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD ghost button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--ghost" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD ghost-danger button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--ghost-danger" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD ghost-info button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--ghost-info" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD ghost-success button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--ghost-success" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD ghost-warn button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--ghost-warn" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD iconName button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--main with-icon" flow="up"><i class="oxd-icon oxd-icon--medium bi-arrow-left oxd-button-icon"></i>
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD iconRightName button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--main with-icon" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div><i class="oxd-icon oxd-icon--medium bi-arrow-right oxd-button-icon oxd-button-icon-right"></i>
</button>
`;

exports[`Button.vue should renders OXD label button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--label" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD label-danger button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--label-danger" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD label-info button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--label-info" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD label-success button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--label-success" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD label-warn button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--label-warn" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD large button 1`] = `
<button type="button" class="oxd-button oxd-button--large oxd-button--main" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD main button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--main" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD medium button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--main" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD secondary button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--secondary" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD small button 1`] = `
<button type="button" class="oxd-button oxd-button--small oxd-button--main" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD solid danger button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--danger" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD solid info button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--info" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD solid success button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--success" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD solid warn button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--warn" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD text button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--text" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;

exports[`Button.vue should renders OXD tool button 1`] = `
<button type="button" class="oxd-button oxd-button--medium oxd-button--tool" flow="up">
  <!--v-if-->
  <div class="oxd-button-label-wrapper">Button</div>
  <!--v-if-->
</button>
`;
